--- a/sprint4android/app/src/main/res/layout/activity_main.xml
+++ b/sprint4android/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="190dp"
-        android:layout_height="729dp"
-        android:layout_marginEnd="110dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="1dp" />
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
