--- a/sprint4android/app/src/main/res/values/colors.xml
+++ b/sprint4android/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#282828</color>
+    <color name="dark_gray">#282828</color>
+    <color name="gray">#808080</color>
     <color name="yellow">#FFFF00</color>
+    <color name="red">#FF0000</color>
 </resources>
