--- a/sprint4android/app/src/main/res/values/styles.xml
+++ b/sprint4android/app/src/main/res/values/styles.xml
@@ -4,6 +4,13 @@
         <item name="android:textSize">30dp</item>
         <item name="android:textColor">@color/yellow</item>
         <item name="android:background">@color/black</item>
-        <item name="android:statusBarColor">@color/gray</item>
+        <item name="android:statusBarColor">@color/dark_gray</item>
+    </style>
+
+    <style name="DetailTheme" parent="Theme.AppCompat">
+        <item name="android:textSize">40dp</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="android:background">@color/gray</item>
+        <item name="android:statusBarColor">@color/dark_gray</item>
     </style>
 </resources>
